# libhoratio

./: .build.yml  .hgignore  .hgsub  .hgsubstate  AUTHORS  BUGS  COPYING  CREDITS  ChangeLog  Doxyfile  Makefile  Makefile.am  Makefile.bor  Makefile.gnu  Makefile.in  NEWS  README  acinclude.m4  alloc.c  autogen.sh  bdflags.c  bdflags.h  biglock.c  blkarray.c  bloclock.c  bloclock.h  build.h  build.sh  calloc.c  config.c  config.h  config.h.in  configure  configure.ac  dbghooks.c  dbghooks.h  dpc_alloc.c  dpc_alloc.h  dpc_bdflags.c  dpc_bdflags.h  (+107 more)
DOCS/: FlowCB.rtf  Help.html
debian/: changelog  control  rules
docs/: Makefile  api.tex  filedep.dia  help.html  release-1.1.6.txt
include/: Makefile.am  dpccap.h  dpcrtlmm.h  hbuild.h  horatio.h
lib/: Makefile.am  dpccap.cpp  dpccap.h  dpcrtlmm.c  halloc.c  halloc.h  hbdflags.c  hbdflags.h  hbiglock.c  hbiglock.h  hblocarr.c  hblocarr.h  hblocksz.c  hbloclck.c  hbloclck.h  hbuild.h  hcalloc.c  hdbghook.c  hdbghook.h  hfree.c  hiblkptr.c  hiblkptr.h  hintdata.c  hintdata.h  hisbad.c  hisbad.h  hlcktrap.c  hlcktrap.h  hlog.c  hlog.h  hopts.c  horatio.c  horatio.h  hrealloc.c  hsafelst.c  hsafelst.h  hstats.c  htrap.c  htrap.h  hvptrap.c  (+1 more)
res/logo/: README
t/: Makefile.am  dpctest1.c  example1.c  example2.cpp  example3.c  htest1.c  newbrand.c
utils/: autogen.sh  build.sh  eol.pl  fixyear.sh  have-hg  hgident  mkdosdist.pl  mkverh.sh  rsed  style.sh  version
